# church-event-planner/routes/members.js
@@ -3,5 +3,7 @@ const membersController = require('../controllers/members');
 
 router.get('/', membersController.getAllMembers);
 router.post('/', membersController.createMember);
+router.put('/:id', membersController.updateMember);
+router.delete('/:id', membersController.deleteMember);
 
 module.exports = router;
