# church-event-planner/routes/registrations.js
@@ -3,5 +3,7 @@ const registrationsController = require('../controllers/registrations');
 
 router.get('/', registrationsController.getAllRegistrations);
 router.post('/', registrationsController.createRegistration);
+router.put('/:id', registrationsController.updateRegistration);
+router.delete('/:id', registrationsController.deleteRegistration);
 
 module.exports = router;
